<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/openhab"
        android:transitionName="openhab_image" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="4dp"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/test_server_hint"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawSelectorOnTop="true"
            android:entries="@array/httphttps" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtHostInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/openhab_server_uri"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPortInput"
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/port"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/openhab_server_port"
                android:inputType="number"
                android:maxLength="5" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/openhab_server_username"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/openhab_server_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/bottomBar"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp"
        app:allowStacking="@bool/abc_allow_stacked_button_bar"
        tools:ignore="PrivateResource">

        <Button
            android:id="@+id/btnTest"
            style="?attr/buttonBarNeutralButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/btnTest" />

        <Button
            android:id="@+id/btnCancel"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btnOk"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>